manifest/objects/LVGO__SPA_Reg_Codes__mdt.object
<CustomObject>
    <fields>
        <fullName>LVGO__Programs__c</fullName>
        <label>Programs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                    <default>true</default>
                    <label>DM</label>
                </value>
                <value>
                    <fullName>DM + BH</fullName>
                </value>
                <value>
                    <fullName>DM + DPP</fullName>
                </value>
                <value>
                    <fullName>DM + DPP + HTN</fullName>
                </value>
                <value>
                    <fullName>DM + DPP + HTN + WM + BH</fullName>
                </value>
                <value>
                    <fullName>DM + HTN</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
                <value>
                    <fullName>HTN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Registration_Code_ID__c</fullName>
        <label>Registration Code ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__SPA_CMC_Prefix__c</fullName>
        <label>SPA CMC Prefix</label>
        <referenceTo>LVGO__SPA_CMC_Prefix__mdt</referenceTo>
        <relationshipLabel>SPA Reg Codes</relationshipLabel>
        <relationshipName>SPA_Reg_Codes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>SPA Reg Code</label>
    <listViews>
        <fullName>LVGO__SPA_Reg_Code_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>LVGO__Programs__c</columns>
        <columns>LVGO__SPA_CMC_Prefix__c</columns>
        <columns>LVGO__Registration_Code_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>SPA Reg Code View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SPA Reg Codes</pluralLabel>
</CustomObject>